crates/baml-rt-quickjs/src/snapshots/baml_rt_quickjs__execution_session_types__tests__execution_session_command_complete_step.snap
---
source: crates/baml-rt-quickjs/src/execution_session_types.rs
expression: "serde_json::to_value(&cmd).unwrap()"
---
{
  "action": "complete_step",
  "session_id": "session-test-123",
  "step_id": "step-test-1",
  "citations": [
    "#1",
    "@4:L2"
  ]
}
