crates/baml-rt-quickjs/src/snapshots/baml_rt_quickjs__execution_session_types__tests__execution_session_command_finish.snap
---
source: crates/baml-rt-quickjs/src/execution_session_types.rs
expression: "serde_json::to_value(&cmd).unwrap()"
---
{
  "action": "finish",
  "session_id": "session-test-123"
}
