crates/baml-rt-quickjs/src/snapshots/baml_rt_quickjs__execution_session_types__tests__execution_session_command_submit_intent.snap
---
source: crates/baml-rt-quickjs/src/execution_session_types.rs
expression: "serde_json::to_value(&cmd).unwrap()"
---
{
  "action": "submit_intent",
  "session_id": "session-test-123",
  "intent": {
    "intentId": "intent-test-1",
    "description": "Investigate the anomaly",
    "citations": [
      "#1",
      "#2"
    ],
    "supersession": null
  }
}
