crates/baml-rt-quickjs/src/snapshots/baml_rt_quickjs__execution_session_types__tests__execution_session_commands@wire.snap
---
source: crates/baml-rt-quickjs/src/execution_session_types.rs
expression: commands
---
{
  "open": {
    "action": "open"
  },
  "submit_intent": {
    "action": "submit_intent",
    "session_id": "session-test-123",
    "intent": {
      "intentId": "intent-test-1",
      "description": "Investigate the anomaly",
      "citations": [
        "#1",
        "#2"
      ],
      "supersession": null
    }
  },
  "submit_intent_supersession": {
    "action": "submit_intent",
    "session_id": "session-test-123",
    "intent": {
      "intentId": "intent-test-1",
      "description": "Refined intent",
      "citations": [
        "#3"
      ],
      "supersession": "replaced_by"
    }
  },
  "submit_plan": {
    "action": "submit_plan",
    "session_id": "session-test-123",
    "plan": {
      "intentId": "intent-test-1",
      "planId": "plan-test-1",
      "steps": [
        {
          "stepId": "step-test-1",
          "description": "Run diagnostics",
          "order": 0,
          "dependsOn": []
        },
        {
          "stepId": "step-test-2",
          "description": "Apply fix",
          "order": 1,
          "dependsOn": [
            "step-test-1"
          ]
        }
      ],
      "supersession": null
    }
  },
  "start_step": {
    "action": "start_step",
    "session_id": "session-test-123",
    "step_id": "step-test-1",
    "citations": [
      "#1"
    ]
  },
  "complete_step": {
    "action": "complete_step",
    "session_id": "session-test-123",
    "step_id": "step-test-1",
    "citations": [
      "#1",
      "@4:L2"
    ]
  },
  "finish": {
    "action": "finish",
    "session_id": "session-test-123"
  },
  "abort": {
    "action": "abort",
    "session_id": "session-test-123",
    "reason": "Run function threw an error"
  }
}
